--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^2.24.2
   google_sign_in: ^6.1.6
   cloud_firestore: ^4.14.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
